--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="description" content="אפליקציית ניהול זמן מבוססת מטריצת אייזנהאואר" />
   <meta name="theme-color" content="#3B82F6" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
