--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="description" content="אפליקציית ניהול זמן מבוססת מטריצת אייזנהאואר" />
   <meta name="theme-color" content="#3B82F6" />
+  
+  <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+  
+  <!-- Apple Meta Tags -->
+  <meta name="apple-mobile-web-app-title" content="אייזנהאואר" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  
   <title>מטריצת אייזנהאואר</title>
 </head>
 <body>
