--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <meta name="description" content="אפליקציית ניהול זמן מבוססת מטריצת אייזנהאואר" />
   <meta name="theme-color" content="#3B82F6" />
   
+  <!-- מניעת caching -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="apple-touch-icon" href="/icon-192.png" />
