הסרה מוחלטת של Service Workers - הסרת manifest.json ו-vite-plugin-pwa

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="apple-touch-icon" href="/icon-192.png" />
   
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="/manifest.json" />
+  <!-- PWA Manifest - הוסר כדי למנוע Service Workers -->
+  <!-- <link rel="manifest" href="/manifest.json" /> -->
   
   <!-- Apple Meta Tags -->
   <meta name="apple-mobile-web-app-title" content="אייזנהאואר" />
