תיקון: הסרת PHP מ-index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx?v=<?php echo time(); ?>"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
 
